@@ -1,3 +1,12 @@
+2006-10-15 Jens Tkotz <jens@peino.de> 1.6-alpha2-svn-b6
+
+ * Fix: Missing , typo in lib/stats.php
+   Thanks to Georg Naggies from forums.
+
+ * Fix: Show translated text for the stats-link options in config.
+
+ * Indenting in stats includes and lib.
+
 2006-10-14 Jens Tkotz <jens@peino.de> 1.6-alpha2-svn-b5
 
  * Change: Partly #1410186
